--- a/public/css/page.css
+++ b/public/css/page.css
@@ -22,6 +22,7 @@ body {
   background-color: white;
   padding: 20px;
   margin-top: 20px;
+  font-size: 20px;
 }
 
 /* Clear floats after the columns */
